feat(feature): create logic, and redesign ui

--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>wordle-clone-app</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html lang="en" class="">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/webp" href="/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>Wordly — Daily Word Challenge</title>
+  <meta name="title" content="Wordly — Daily Word Challenge" />
+  <meta name="description"
+    content="A premium Wordle clone. Simple, elegant, and addictive. Play the daily challenge or practice with unlimited words." />
+  <meta name="theme-color" content="#10b981" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://wordly.gabrielnathanael.site/" />
+  <meta property="og:title" content="Wordly — Daily Word Challenge" />
+  <meta property="og:description"
+    content="A premium Wordle clone. Simple, elegant, and addictive. Play the daily challenge or practice with unlimited words." />
+  <meta property="og:image" content="/logo.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://wordly.gabrielnathanael.site/" />
+  <meta property="twitter:title" content="Wordly — Daily Word Challenge" />
+  <meta property="twitter:description"
+    content="A premium Wordle clone. Simple, elegant, and addictive. Play the daily challenge or practice with unlimited words." />
+  <meta property="twitter:image" content="/logo.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
