feat(fixing) : fixing bug when try pratice mode, and submiting answer, fix seo

--- a/index.html
+++ b/index.html
@@ -3,31 +3,70 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/webp" href="/logo.png" />
+  <link rel="icon" type="image/webp" href="/logo2.png" />
+  <link rel="manifest" href="/manifest.json" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#10b981" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://wordply.gabrielnathanael.site/" />
 
   <!-- Primary Meta Tags -->
-  <title>Wordly — Daily Word Challenge</title>
-  <meta name="title" content="Wordly — Daily Word Challenge" />
+  <title>Wordply — The Ultimate Daily Word Challenge & Practice</title>
+  <meta name="title" content="Wordply — The Ultimate Daily Word Challenge & Practice" />
   <meta name="description"
-    content="A premium Wordle clone. Simple, elegant, and addictive. Play the daily challenge or practice with unlimited words." />
-  <meta name="theme-color" content="#10b981" />
+    content="Play Wordply, the premium Wordle clone. Solve the daily word challenge, practice with unlimited games, and track your stats. Simple, elegant, and addictive word puzzle game." />
+  <meta name="keywords"
+    content="wordle, wordply, word game, daily word challenge, word puzzle, unlimited wordle, wordle clone, practice wordle, gabriel nathanael, permainan kata, wordle indonesia, game kata" />
+  <meta name="author" content="Gabriel Nathanael" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://wordly.gabrielnathanael.site/" />
-  <meta property="og:title" content="Wordly — Daily Word Challenge" />
+  <meta property="og:url" content="https://wordply.gabrielnathanael.site/" />
+  <meta property="og:title" content="Wordply — The Ultimate Daily Word Challenge & Practice" />
   <meta property="og:description"
-    content="A premium Wordle clone. Simple, elegant, and addictive. Play the daily challenge or practice with unlimited words." />
-  <meta property="og:image" content="/logo.png" />
+    content="Challenge yourself with Wordply. Play the daily word puzzle or practice with unlimited words in this elegant Wordle clone." />
+  <meta property="og:image" content="https://wordply.gabrielnathanael.site/logo2.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://wordly.gabrielnathanael.site/" />
-  <meta property="twitter:title" content="Wordly — Daily Word Challenge" />
+  <meta property="twitter:url" content="https://wordply.gabrielnathanael.site/" />
+  <meta property="twitter:title" content="Wordply — The Ultimate Daily Word Challenge & Practice" />
   <meta property="twitter:description"
-    content="A premium Wordle clone. Simple, elegant, and addictive. Play the daily challenge or practice with unlimited words." />
-  <meta property="twitter:image" content="/logo.png" />
+    content="Challenge yourself with Wordply. Play the daily word puzzle or practice with unlimited words in this elegant Wordle clone." />
+  <meta property="twitter:image" content="https://wordply.gabrielnathanael.site/logo2.png" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Wordply",
+      "operatingSystem": "Web",
+      "applicationCategory": "GameApplication",
+      "genre": "Word Game",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "5",
+        "ratingCount": "1"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "Gabriel Nathanael"
+      },
+      "description": "A premium Wordle clone with daily challenges and unlimited practice mode."
+    }
+  </script>
 </head>
 
 <body>
