feat(seo) : change seo, and change some word in share

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>Wordply — The Ultimate Daily Word Challenge & Practice</title>
   <meta name="title" content="Wordply — The Ultimate Daily Word Challenge & Practice" />
   <meta name="description"
-    content="Play Wordply, the premium Wordle clone. Solve the daily word challenge, practice with unlimited games, and track your stats. Simple, elegant, and addictive word puzzle game." />
+    content="Play Wordply, the ultimate word puzzle challenge. Solve the daily word challenge, practice with unlimited games, and track your stats. Simple, elegant, and addictive word puzzle game." />
   <meta name="keywords"
     content="wordle, wordply, word game, daily word challenge, word puzzle, unlimited wordle, wordle clone, practice wordle, gabriel nathanael, permainan kata, wordle indonesia, game kata" />
   <meta name="author" content="Gabriel Nathanael" />
@@ -24,7 +24,7 @@
   <meta property="og:url" content="https://wordply.gabrielnathanael.site/" />
   <meta property="og:title" content="Wordply — The Ultimate Daily Word Challenge & Practice" />
   <meta property="og:description"
-    content="Challenge yourself with Wordply. Play the daily word puzzle or practice with unlimited words in this elegant Wordle clone." />
+    content="Challenge yourself with Wordply. Play the daily word puzzle or practice with unlimited words in this elegant word puzzle challenge." />
   <meta property="og:image" content="https://wordply.gabrielnathanael.site/logo2.png" />
 
   <!-- Twitter -->
@@ -32,7 +32,7 @@
   <meta property="twitter:url" content="https://wordply.gabrielnathanael.site/" />
   <meta property="twitter:title" content="Wordply — The Ultimate Daily Word Challenge & Practice" />
   <meta property="twitter:description"
-    content="Challenge yourself with Wordply. Play the daily word puzzle or practice with unlimited words in this elegant Wordle clone." />
+    content="Challenge yourself with Wordply. Play the daily word puzzle or practice with unlimited words in this elegant word puzzle challenge." />
   <meta property="twitter:image" content="https://wordply.gabrielnathanael.site/logo2.png" />
 
   <!-- Fonts -->
@@ -64,7 +64,7 @@
         "@type": "Person",
         "name": "Gabriel Nathanael"
       },
-      "description": "A premium Wordle clone with daily challenges and unlimited practice mode."
+      "description": "A modern word puzzle with daily challenges and unlimited practice mode."
     }
   </script>
 </head>
